IDE: automatic changes in lfm.
git-svn-id: trunk@45974 -

--- a/ide/idehelpmanager.lfm
+++ b/ide/idehelpmanager.lfm
@@ -8,7 +8,7 @@ object HelpSelectorDialog: THelpSelectorDialog
   ClientWidth = 500
   OnClose = HelpSelectorDialogClose
   Position = poScreenCenter
-  LCLVersion = '0.9.27'
+  LCLVersion = '1.3'
   object NodesGroupBox: TGroupBox
     Left = 6
     Height = 239
@@ -37,6 +37,14 @@ object HelpSelectorDialog: THelpSelectorDialog
     Height = 26
     Top = 251
     Width = 488
+    OKButton.Name = 'OKButton'
+    OKButton.DefaultCaption = True
+    HelpButton.Name = 'HelpButton'
+    HelpButton.DefaultCaption = True
+    CloseButton.Name = 'CloseButton'
+    CloseButton.DefaultCaption = True
+    CancelButton.Name = 'CancelButton'
+    CancelButton.DefaultCaption = True
     TabOrder = 1
     ShowButtons = [pbOK, pbCancel]
     ShowBevel = False
