IDE: fixed extending unit/inc path in PI, fixed checking last pcp ignoring optional Darwin bundle, added dummy external tools for dependencies
git-svn-id: trunk@45986 -

--- a/ide/frames/compiler_compilation_options.lfm
+++ b/ide/frames/compiler_compilation_options.lfm
@@ -2,9 +2,9 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
   Left = 0
   Height = 539
   Top = 0
-  Width = 599
+  Width = 741
   ClientHeight = 539
-  ClientWidth = 599
+  ClientWidth = 741
   TabOrder = 0
   DesignLeft = 481
   DesignTop = 150
@@ -12,9 +12,9 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
     Left = 0
-    Height = 24
+    Height = 18
     Top = 0
-    Width = 129
+    Width = 136
     Caption = 'chkCreateMakefile'
     TabOrder = 0
   end
@@ -25,35 +25,35 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 0
-    Height = 114
-    Top = 214
-    Width = 599
+    Height = 103
+    Top = 218
+    Width = 741
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
     BorderSpacing.Top = 6
     Caption = 'ExecuteAfterGroupBox'
-    ClientHeight = 97
-    ClientWidth = 595
+    ClientHeight = 81
+    ClientWidth = 733
     TabOrder = 3
     object lblRunIfExecAfter: TLabel
       AnchorSideLeft.Control = ExecuteAfterGroupBox
       AnchorSideTop.Control = ExecuteAfterGroupBox
       Left = 6
-      Height = 15
+      Height = 16
       Top = 6
-      Width = 99
+      Width = 109
       BorderSpacing.Around = 6
       Caption = 'lblRunIfExecAfter'
       ParentColor = False
     end
     object ExecuteAfterCommandLabel: TLabel
       AnchorSideLeft.Control = ExecuteAfterGroupBox
-      AnchorSideTop.Control = ExecuteAfterCommandEdit
+      AnchorSideTop.Control = ExecuteAfterCommandComboBox
       AnchorSideTop.Side = asrCenter
       Left = 6
-      Height = 15
-      Top = 41
-      Width = 158
+      Height = 16
+      Top = 32
+      Width = 178
       BorderSpacing.Around = 6
       Caption = 'ExecuteAfterCommandLabel'
       ParentColor = False
@@ -62,10 +62,10 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideLeft.Control = lblRunIfExecAfter
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = ExecuteAfterGroupBox
-      Left = 135
-      Height = 24
+      Left = 145
+      Height = 18
       Top = 6
-      Width = 145
+      Width = 154
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'chkExecAfterCompile'
@@ -75,10 +75,10 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideLeft.Control = chkExecAfterCompile
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = ExecuteAfterGroupBox
-      Left = 310
-      Height = 24
+      Left = 329
+      Height = 18
       Top = 6
-      Width = 129
+      Width = 133
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'chkExecAfterBuild'
@@ -88,84 +88,102 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideLeft.Control = chkExecAfterBuild
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = ExecuteAfterGroupBox
-      Left = 469
-      Height = 24
+      Left = 492
+      Height = 18
       Top = 6
-      Width = 123
+      Width = 126
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'chkExecAfterRun'
       TabOrder = 2
     end
-    object ExecuteAfterCommandEdit: TEdit
-      AnchorSideLeft.Control = ExecuteAfterCommandLabel
-      AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = chkExecAfterCompile
-      AnchorSideTop.Side = asrBottom
-      AnchorSideRight.Control = ExecuteAfterGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 182
-      Height = 25
-      Top = 36
-      Width = 407
-      Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Left = 12
-      BorderSpacing.Around = 6
-      TabOrder = 3
-      Text = 'ExecuteAfterCommandEdit'
-    end
     object ExecuteAfterScanFPCCheckBox: TCheckBox
       AnchorSideLeft.Control = ExecuteAfterScanMakeCheckBox
       AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = ExecuteAfterCommandEdit
-      AnchorSideTop.Side = asrBottom
-      Left = 379
-      Height = 24
-      Top = 67
-      Width = 199
+      AnchorSideTop.Control = ExecuteAfterScanMakeCheckBox
+      AnchorSideTop.Side = asrCenter
+      Left = 407
+      Height = 18
+      Top = 57
+      Width = 213
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'ExecuteAfterScanFPCCheckBox'
-      TabOrder = 5
+      TabOrder = 4
     end
     object ExecuteAfterScanMakeCheckBox: TCheckBox
       AnchorSideLeft.Control = ExecuteAfterScanLabel
       AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = ExecuteAfterCommandEdit
+      AnchorSideTop.Control = ExecuteAfterCommandComboBox
       AnchorSideTop.Side = asrBottom
-      Left = 141
-      Height = 24
-      Top = 67
-      Width = 208
+      Left = 154
+      Height = 18
+      Top = 57
+      Width = 223
       BorderSpacing.Around = 6
       Caption = 'ExecuteAfterScanMakeCheckBox'
-      TabOrder = 4
+      TabOrder = 3
     end
     object ExecuteAfterShowAllCheckBox: TCheckBox
       AnchorSideLeft.Control = ExecuteAfterScanFPCCheckBox
       AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = ExecuteAfterCommandEdit
-      AnchorSideTop.Side = asrBottom
-      Left = 608
-      Height = 24
-      Top = 67
-      Width = 197
+      AnchorSideTop.Control = ExecuteAfterScanMakeCheckBox
+      AnchorSideTop.Side = asrCenter
+      Left = 650
+      Height = 18
+      Top = 57
+      Width = 211
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'ExecuteAfterShowAllCheckBox'
-      TabOrder = 6
+      TabOrder = 5
     end
     object ExecuteAfterScanLabel: TLabel
       AnchorSideLeft.Control = ExecuteAfterGroupBox
       AnchorSideTop.Control = ExecuteAfterScanMakeCheckBox
       AnchorSideTop.Side = asrCenter
       Left = 6
-      Height = 15
-      Top = 72
-      Width = 129
+      Height = 16
+      Top = 58
+      Width = 142
       BorderSpacing.Left = 6
       Caption = 'ExecuteAfterScanLabel'
       ParentColor = False
+    end
+    object ExecuteAfterCommandComboBox: TComboBox
+      AnchorSideLeft.Control = ExecuteAfterCommandLabel
+      AnchorSideLeft.Side = asrBottom
+      AnchorSideTop.Control = chkExecAfterCompile
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Control = ExecAfterBrowseButton
+      Left = 196
+      Height = 21
+      Top = 30
+      Width = 461
+      Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.Left = 12
+      BorderSpacing.Top = 6
+      BorderSpacing.Bottom = 6
+      ItemHeight = 0
+      TabOrder = 6
+      Text = 'ExecuteAfterCommandComboBox'
+    end
+    object ExecAfterBrowseButton: TButton
+      AnchorSideTop.Control = ExecuteAfterCommandComboBox
+      AnchorSideRight.Control = ExecuteAfterGroupBox
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = ExecuteAfterCommandComboBox
+      AnchorSideBottom.Side = asrBottom
+      Left = 657
+      Height = 20
+      Top = 30
+      Width = 70
+      Anchors = [akTop, akRight]
+      AutoSize = True
+      BorderSpacing.Right = 6
+      Caption = '...'
+      OnClick = CompCmdBrowseButtonClick
+      TabOrder = 7
     end
   end
   object grpCompiler: TGroupBox
@@ -175,23 +193,23 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 0
-    Height = 86
-    Top = 122
-    Width = 599
+    Height = 79
+    Top = 133
+    Width = 741
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
     BorderSpacing.Top = 6
     Caption = 'grpCompiler'
-    ClientHeight = 69
-    ClientWidth = 595
+    ClientHeight = 57
+    ClientWidth = 733
     TabOrder = 2
     object lblRunIfCompiler: TLabel
       AnchorSideLeft.Control = grpCompiler
       AnchorSideTop.Control = grpCompiler
       Left = 6
-      Height = 15
+      Height = 16
       Top = 6
-      Width = 92
+      Width = 106
       BorderSpacing.Around = 6
       Caption = 'lblRunIfCompiler'
       ParentColor = False
@@ -201,9 +219,9 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideTop.Control = cobCompiler
       AnchorSideTop.Side = asrCenter
       Left = 6
-      Height = 15
-      Top = 42
-      Width = 62
+      Height = 16
+      Top = 32
+      Width = 73
       BorderSpacing.Around = 6
       Caption = 'lblCompiler'
       ParentColor = False
@@ -212,10 +230,10 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideLeft.Control = lblRunIfCompiler
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = grpCompiler
-      Left = 128
-      Height = 24
+      Left = 142
+      Height = 18
       Top = 6
-      Width = 138
+      Width = 152
       BorderSpacing.Left = 30
       BorderSpacing.Top = 6
       Caption = 'chkCompilerCompile'
@@ -225,10 +243,10 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideLeft.Control = chkCompilerCompile
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = grpCompiler
-      Left = 296
-      Height = 24
+      Left = 324
+      Height = 18
       Top = 6
-      Width = 122
+      Width = 131
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'chkCompilerBuild'
@@ -238,10 +256,10 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideLeft.Control = chkCompilerBuild
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = grpCompiler
-      Left = 448
-      Height = 24
+      Left = 485
+      Height = 18
       Top = 6
-      Width = 116
+      Width = 124
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'chkCompilerRun'
@@ -253,10 +271,10 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideTop.Control = chkCompilerCompile
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = BrowseCompilerButton
-      Left = 80
-      Height = 27
-      Top = 36
-      Width = 488
+      Left = 91
+      Height = 21
+      Top = 30
+      Width = 566
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Left = 12
       BorderSpacing.Top = 6
@@ -271,15 +289,15 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideRight.Side = asrBottom
       AnchorSideBottom.Control = cobCompiler
       AnchorSideBottom.Side = asrBottom
-      Left = 568
-      Height = 27
-      Top = 36
-      Width = 21
+      Left = 657
+      Height = 21
+      Top = 30
+      Width = 70
       Anchors = [akTop, akRight, akBottom]
       AutoSize = True
       BorderSpacing.Right = 6
       Caption = '...'
-      OnClick = BrowseCompilerButtonClick
+      OnClick = CompCmdBrowseButtonClick
       ParentShowHint = False
       ShowHint = True
       TabOrder = 4
@@ -292,34 +310,35 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 0
-    Height = 86
-    Top = 30
-    Width = 599
+    Height = 103
+    Top = 24
+    Width = 741
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
     BorderSpacing.Top = 6
     Caption = 'ExecuteBeforeGroupBox'
-    ClientHeight = 69
-    ClientWidth = 595
+    ClientHeight = 81
+    ClientWidth = 733
     TabOrder = 1
     object lblRunIfExecBefore: TLabel
       AnchorSideLeft.Control = ExecuteBeforeGroupBox
       AnchorSideTop.Control = ExecuteBeforeGroupBox
       Left = 6
-      Height = 15
+      Height = 16
       Top = 6
-      Width = 108
+      Width = 118
       BorderSpacing.Around = 6
       Caption = 'lblRunIfExecBefore'
       ParentColor = False
     end
     object ExecuteBeforeCommandLabel: TLabel
       AnchorSideLeft.Control = ExecuteBeforeGroupBox
+      AnchorSideTop.Control = ExecuteBeforeCommandComboBox
       AnchorSideTop.Side = asrCenter
       Left = 6
-      Height = 15
-      Top = 41
-      Width = 167
+      Height = 16
+      Top = 32
+      Width = 187
       BorderSpacing.Around = 6
       Caption = 'ExecuteBeforeCommandLabel'
       ParentColor = False
@@ -328,10 +347,10 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideLeft.Control = lblRunIfExecBefore
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = ExecuteBeforeGroupBox
-      Left = 144
-      Height = 24
+      Left = 154
+      Height = 18
       Top = 6
-      Width = 154
+      Width = 163
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'chkExecBeforeCompile'
@@ -341,10 +360,10 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideLeft.Control = chkExecBeforeCompile
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = ExecuteBeforeGroupBox
-      Left = 328
-      Height = 24
+      Left = 347
+      Height = 18
       Top = 6
-      Width = 138
+      Width = 142
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'chkExecBeforeBuild'
@@ -354,10 +373,10 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideLeft.Control = chkExecBeforeBuild
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = ExecuteBeforeGroupBox
-      Left = 496
-      Height = 24
+      Left = 519
+      Height = 18
       Top = 6
-      Width = 132
+      Width = 135
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'chkExecBeforeRun'
@@ -366,11 +385,12 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
     object ExecuteBeforeScanFPCCheckBox: TCheckBox
       AnchorSideLeft.Control = ExecuteBeforeScanMakeCheckBox
       AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Side = asrBottom
-      Left = 397
-      Height = 24
-      Top = 67
-      Width = 208
+      AnchorSideTop.Control = ExecuteBeforeScanMakeCheckBox
+      AnchorSideTop.Side = asrCenter
+      Left = 425
+      Height = 18
+      Top = 57
+      Width = 222
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'ExecuteBeforeScanFPCCheckBox'
@@ -379,11 +399,12 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
     object ExecuteBeforeScanMakeCheckBox: TCheckBox
       AnchorSideLeft.Control = ExecuteBeforeScanLabel
       AnchorSideLeft.Side = asrBottom
+      AnchorSideTop.Control = ExecuteBeforeCommandComboBox
       AnchorSideTop.Side = asrBottom
-      Left = 150
-      Height = 24
-      Top = 67
-      Width = 217
+      Left = 163
+      Height = 18
+      Top = 57
+      Width = 232
       BorderSpacing.Around = 6
       Caption = 'ExecuteBeforeScanMakeCheckBox'
       TabOrder = 3
@@ -391,11 +412,12 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
     object ExecuteBeforeShowAllCheckBox: TCheckBox
       AnchorSideLeft.Control = ExecuteBeforeScanFPCCheckBox
       AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Side = asrBottom
-      Left = 635
-      Height = 24
-      Top = 67
-      Width = 206
+      AnchorSideTop.Control = ExecuteBeforeScanMakeCheckBox
+      AnchorSideTop.Side = asrCenter
+      Left = 677
+      Height = 18
+      Top = 57
+      Width = 220
       BorderSpacing.Left = 24
       BorderSpacing.Around = 6
       Caption = 'ExecuteBeforeShowAllCheckBox'
@@ -406,9 +428,9 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideTop.Control = ExecuteBeforeScanMakeCheckBox
       AnchorSideTop.Side = asrCenter
       Left = 6
-      Height = 15
-      Top = 72
-      Width = 138
+      Height = 16
+      Top = 58
+      Width = 151
       BorderSpacing.Left = 6
       Caption = 'ExecuteBeforeScanLabel'
       ParentColor = False
@@ -418,18 +440,36 @@ object CompilerCompilationOptionsFrame: TCompilerCompilationOptionsFrame
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = chkExecBeforeCompile
       AnchorSideTop.Side = asrBottom
-      AnchorSideRight.Control = ExecuteBeforeGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 191
-      Height = 27
-      Top = 36
-      Width = 398
+      AnchorSideRight.Control = ExecBeforeBrowseButton
+      Left = 205
+      Height = 21
+      Top = 30
+      Width = 452
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Left = 12
-      BorderSpacing.Around = 6
+      BorderSpacing.Top = 6
+      BorderSpacing.Bottom = 6
       ItemHeight = 0
       TabOrder = 6
       Text = 'ExecuteBeforeCommandComboBox'
+    end
+    object ExecBeforeBrowseButton: TButton
+      AnchorSideLeft.Side = asrBottom
+      AnchorSideTop.Control = ExecuteBeforeCommandComboBox
+      AnchorSideRight.Control = ExecuteBeforeGroupBox
+      AnchorSideRight.Side = asrBottom
+      AnchorSideBottom.Control = ExecuteBeforeCommandComboBox
+      AnchorSideBottom.Side = asrBottom
+      Left = 657
+      Height = 21
+      Top = 30
+      Width = 70
+      Anchors = [akTop, akRight, akBottom]
+      AutoSize = True
+      BorderSpacing.Right = 6
+      Caption = '...'
+      OnClick = CompCmdBrowseButtonClick
+      TabOrder = 7
     end
   end
 end
